--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 ---
-name: Addons by t0bst4r
-url: https://github.com/t0bst4r/home-assistant-addons
+name: "Addons by t0bst4r (paolo's fork)"
+url: https://github.com/paoloantinori/home-assistant-addons
 maintainer: Tobias Glatthar
